first step in adding margins and tab styling

--- a/sway/meson.build
+++ b/sway/meson.build
@@ -141,6 +141,8 @@ sway_sources = files(
 	'commands/titlebar_border_thickness.c',
 	'commands/titlebar_padding.c',
 	'commands/titlebar_separator.c',
+	'commands/titlebar_margin.c',
+	'commands/titlebar_margin_collapse.c',
 	'commands/unmark.c',
 	'commands/urgent.c',
 	'commands/workspace.c',
