remove complex margin calculations and collapse logic, finish up margin and titlebar logic, and start on rounded corner logic

--- a/sway/meson.build
+++ b/sway/meson.build
@@ -138,11 +138,14 @@ sway_sources = files(
 	'commands/tiling_drag_threshold.c',
 	'commands/title_align.c',
 	'commands/title_format.c',
+	'commands/titlebar_align.c',
 	'commands/titlebar_border_thickness.c',
 	'commands/titlebar_padding.c',
 	'commands/titlebar_separator.c',
+	'commands/titlebar_gaps.c',
 	'commands/titlebar_margin.c',
-	'commands/titlebar_margin_collapse.c',
+	'commands/titlebar_tab_arrangement.c',
+	'commands/titlebar_width.c',
 	'commands/unmark.c',
 	'commands/urgent.c',
 	'commands/workspace.c',
