fix corner being inconsistent and add configuration for them

--- a/sway/meson.build
+++ b/sway/meson.build
@@ -105,6 +105,7 @@ sway_sources = files(
 	'commands/reload.c',
 	'commands/rename.c',
 	'commands/resize.c',
+	'commands/rounded_corners.c',
 	'commands/scratchpad.c',
 	'commands/scratchpad_minimize.c',
 	'commands/seat.c',
