add config to disable/enable border/titlebar blur

--- a/sway/meson.build
+++ b/sway/meson.build
@@ -48,6 +48,7 @@ sway_sources = files(
 	'commands/bar.c',
 	'commands/bind.c',
 	'commands/blur.c',
+    'commands/blur_border.c',
 	'commands/blur_brightness.c',
 	'commands/blur_contrast.c',
 	'commands/blur_passes.c',
@@ -140,6 +141,7 @@ sway_sources = files(
 	'commands/title_align.c',
 	'commands/title_format.c',
 	'commands/titlebar_align.c',
+    'commands/titlebar_blur.c',
 	'commands/titlebar_border_thickness.c',
 	'commands/titlebar_padding.c',
 	'commands/titlebar_separator.c',
